tried to fix contact page text inputs being slightly off center on mobile.

--- a/src/style/contact.css
+++ b/src/style/contact.css
@@ -23,6 +23,7 @@ form{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     gap: 25px;
 }
 form p{
@@ -60,6 +61,7 @@ button{
     color:#819283;
     font-size: 16px;
     font-weight: 200px;
+    margin: 0 auto;
 }
 #textInput::placeholder{
     color:#819283;
